# OpenCL

./: CMakeLists.txt  LICENSE  README.md  main.cpp  opencl_array.cl  opencl_array.cpp  opencl_array.hpp
